--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
 	<title>Burger Food</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="img/favicon.ico"/>
+	<!--CDN Font Awesome-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
+
+	<!-- ======= Header Section/Seção do cabeçalho ======== -->
+
+
+
 	
 	<script src="js/script.js"></script>
 </body>
