--- a/index.html
+++ b/index.html
@@ -12,8 +12,25 @@
 </head>
 <body>
 
-	<!-- ======= Header Section/Seção do cabeçalho ======== -->
+<!-- ======= Header Section/Seção do cabeçalho ======== -->
+<header class="header">
+	<div class="fas fa-bars" id="menu-btn icons"></div>
+	<div class="fas fa-search" id="search-btn icons"></div>
 
+	<nav class="navbar">
+		<a href="#home">Home</a>
+		<a href="#menu">Cardápio</a>
+		<a href="#about">Sobre</a>
+		<span class="space"></span>
+		<a href="#reviews">Reviews</a>
+		<a href="#blogs">Blogs</a>
+		<a href="#contact">Contatos</a>
+	</nav>
+
+	<a href="#" class="fas fa-shopping-cart icons"></a>
+	<a href="#home" class="logo"><img src="img/logo.png" alt=""></a>
+
+</header>
 
 
 	
