--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <!-- ======= Header Section/Seção do cabeçalho ======== -->
 <header class="header">
-	<div class="fas fa-bars" id="menu-btn icons"></div>
-	<div class="fas fa-search" id="search-btn icons"></div>
+	<div class="fas fa-bars icons" id="menu-btn"></div>
+	<div class="fas fa-search icons" id="search-btn"></div>
 
 	<nav class="navbar">
 		<a href="#home">Home</a>
