--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 	<a href="#" class="fas fa-shopping-cart icons"></a>
 	<a href="#home" class="logo"><img src="img/logo.png" alt=""></a>
 
+	<form action="" class="search-form">
+		<input type="search" name="" placeholder="Procure aqui..." id="search-box">
+		<label for="search-box" class="fas fa-search icons"></label>
+	</form>
+
 </header>
 
 
