--- a/index.html
+++ b/index.html
@@ -38,6 +38,30 @@
 </header>
 
 
+<!-- ======= Home Section/Seção de inicio ======== -->
+<section class="home" id="home">
+	<div class="content">
+		<img src="img/burger-baner.png" alt="">
+		<h3>Tão carnudo que você vai enlouquecer</h3>
+		<p>Leite de capivaris, leite de mula manquis sem cabeça.Tá deprimidis, eu conheço uma cachacis que pode alegrar</p>
+		<a href="#menu" class="btn"></a>
+	</div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 	
 	<script src="js/script.js"></script>
 </body>
