--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<img src="img/burger-baner.png" alt="">
 		<h3>Tão carnudo que você vai enlouquecer</h3>
 		<p>Leite de capivaris, leite de mula manquis sem cabeça.Tá deprimidis, eu conheço uma cachacis que pode alegrar</p>
-		<a href="#menu" class="btn"></a>
+		<a href="#menu" class="btn">Nosso cardápio</a>
 	</div>
 </section>
 
