--- a/index.html
+++ b/index.html
@@ -49,7 +49,24 @@
 </section>
 
 
-
+<!-- ======= Service Section/Seção de Serviço ======== -->
+<section class="service">
+	<div class="box">
+		<i class="fas fa-hamburger"></i>
+		<h3>Melhor qualidade</h3>
+		<p>Quem num gosta di mim que vai caçá sua turmis! A ordem dos tratores não altera o pão duris.</p>
+	</div>
+	<div class="box">
+		<i class="fas fa-shipping-fast"></i>
+		<h3>Entrega grátis</h3>
+		<p>Mais vale um bebadis conhecidiss, que um alcoolatra anonimiids si num tem leite então bota.</p>
+	</div>
+	<div class="box">
+		<i class="fas fa-hamburger"></i>
+		<h3>Suporte 24 horas</h3>
+		<p>Tá deprimidis, eu conheço uma cachacis que pode alegrar sua vidiis. Posueree libero varius.</p>
+	</div>
+</section>
 
 
 
