--- a/index.html
+++ b/index.html
@@ -69,7 +69,13 @@
 </section>
 
 
-
+<!-- ======= Menu Section/Seção de Cardápio ======== -->
+<section class="menu" id="menu">
+	<div class="heading">
+		<img src="img/title-img.png" alt="">
+		<h3>Nosso cardápio</h3>
+	</div>
+</section>
 
 
 
