--- a/index.html
+++ b/index.html
@@ -75,6 +75,98 @@
 		<img src="img/title-img.png" alt="">
 		<h3>Nosso cardápio</h3>
 	</div>
+	<div class="box-container">
+		<div class="box">
+			<img src="img/product-1.png" alt="">
+			<div class="content">
+				<div class="stars">
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star-half-alt"></i>
+				</div>
+				<h3>Hambúrguer de Queijo</h3>
+				<div class="price">$29.99</div>
+				<a href="#" class="btn">Adicionar ao carrinho</a>
+			</div>
+		</div>
+		<div class="box">
+			<img src="img/product-2.png" alt="">
+			<div class="content">
+				<div class="stars">
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star-half-alt"></i>
+				</div>
+				<h3>Hambúrguer de Queijo</h3>
+				<div class="price">$29.99</div>
+				<a href="#" class="btn">Adicionar ao carrinho</a>
+			</div>
+		</div>
+		<div class="box">
+			<img src="img/product-3.png" alt="">
+			<div class="content">
+				<div class="stars">
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star-half-alt"></i>
+				</div>
+				<h3>Hambúrguer de Queijo</h3>
+				<div class="price">$29.99</div>
+				<a href="#" class="btn">Adicionar ao carrinho</a>
+			</div>
+		</div>
+		<div class="box">
+			<img src="img/product-4.png" alt="">
+			<div class="content">
+				<div class="stars">
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star-half-alt"></i>
+				</div>
+				<h3>Hambúrguer de Queijo</h3>
+				<div class="price">$29.99</div>
+				<a href="#" class="btn">Adicionar ao carrinho</a>
+			</div>
+		</div>
+		<div class="box">
+			<img src="img/product-5.png" alt="">
+			<div class="content">
+				<div class="stars">
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star-half-alt"></i>
+				</div>
+				<h3>Hambúrguer de Queijo</h3>
+				<div class="price">$29.99</div>
+				<a href="#" class="btn">Adicionar ao carrinho</a>
+			</div>
+		</div>
+		<div class="box">
+			<img src="img/product-6.png" alt="">
+			<div class="content">
+				<div class="stars">
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star"></i>
+					<i class="fas fa-star-half-alt"></i>
+				</div>
+				<h3>Hambúrguer de Queijo</h3>
+				<div class="price">$29.99</div>
+				<a href="#" class="btn">Adicionar ao carrinho</a>
+			</div>
+		</div>
+	</div>
 </section>
 
 
