--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<i class="fas fa-star"></i>
 					<i class="fas fa-star-half-alt"></i>
 				</div>
-				<h3>Hambúrguer de Queijo</h3>
+				<h3>Burger Miguelagem</h3>
 				<div class="price">$29.99</div>
 				<a href="#" class="btn">Adicionar ao carrinho</a>
 			</div>
@@ -101,8 +101,8 @@
 					<i class="fas fa-star"></i>
 					<i class="fas fa-star-half-alt"></i>
 				</div>
-				<h3>Hambúrguer de Queijo</h3>
-				<div class="price">$29.99</div>
+				<h3>Burger Kids</h3>
+				<div class="price">$15.99</div>
 				<a href="#" class="btn">Adicionar ao carrinho</a>
 			</div>
 		</div>
@@ -116,8 +116,8 @@
 					<i class="fas fa-star"></i>
 					<i class="fas fa-star-half-alt"></i>
 				</div>
-				<h3>Hambúrguer de Queijo</h3>
-				<div class="price">$29.99</div>
+				<h3>Chicken Crisp</h3>
+				<div class="price">$19.99</div>
 				<a href="#" class="btn">Adicionar ao carrinho</a>
 			</div>
 		</div>
@@ -131,8 +131,8 @@
 					<i class="fas fa-star"></i>
 					<i class="fas fa-star-half-alt"></i>
 				</div>
-				<h3>Hambúrguer de Queijo</h3>
-				<div class="price">$29.99</div>
+				<h3>Cheeseburger Duplo</h3>
+				<div class="price">$35.99</div>
 				<a href="#" class="btn">Adicionar ao carrinho</a>
 			</div>
 		</div>
@@ -147,7 +147,7 @@
 					<i class="fas fa-star-half-alt"></i>
 				</div>
 				<h3>Hambúrguer de Queijo</h3>
-				<div class="price">$29.99</div>
+				<div class="price">$20.99</div>
 				<a href="#" class="btn">Adicionar ao carrinho</a>
 			</div>
 		</div>
@@ -161,8 +161,8 @@
 					<i class="fas fa-star"></i>
 					<i class="fas fa-star-half-alt"></i>
 				</div>
-				<h3>Hambúrguer de Queijo</h3>
-				<div class="price">$29.99</div>
+				<h3>Cheeseburger</h3>
+				<div class="price">$14.99</div>
 				<a href="#" class="btn">Adicionar ao carrinho</a>
 			</div>
 		</div>
