--- a/index.html
+++ b/index.html
@@ -170,8 +170,25 @@
 </section>
 
 
-
-
+<!-- ======= About Section/Seção Sobre Nós ======== -->
+<section class="about">
+	<div class="image">
+		<img src="img/about-img.png" alt="">
+	</div>
+	<div class="content">
+		<h3 class="title">Entre no paraíso do hambúrguer</h3>
+		<p>Atirei o pau no gatis, per gatis num morreus.Detraxit consequat et quo num tendi nada.Mauris nec dolor in eros commodo tempor. Aenean aliquam molestie leo, vitae iaculis nisl.A ordem dos tratores não altera o pão duris.</p>
+		<div class="icons">
+			<h3><i class="fas fa-check"></i> Melhor preço </h3>
+			<h3><i class="fas fa-check"></i> Melhor serviço </h3>
+			<h3><i class="fas fa-check"></i> Ingrediente fresco </h3>
+			<h3><i class="fas fa-check"></i> Pães assados </h3>
+			<h3><i class="fas fa-check"> Queijo natural </i></h3>
+			<h3><i class="fas fa-check"> Vegetal e não vegetariano </i></h3>
+		</div>
+		<a href="#" class="btn">Mais informações</a>
+	</div>
+</section>
 
 
 
