--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
 			<h3><i class="fas fa-check"></i> Melhor serviço </h3>
 			<h3><i class="fas fa-check"></i> Ingrediente fresco </h3>
 			<h3><i class="fas fa-check"></i> Pães assados </h3>
-			<h3><i class="fas fa-check"> Queijo natural </i></h3>
-			<h3><i class="fas fa-check"> Vegetal e não vegetariano </i></h3>
+			<h3><i class="fas fa-check"></i> Queijo natural </i></h3>
+			<h3><i class="fas fa-check"></i> Vegetal e não vegetariano </i></h3>
 		</div>
 		<a href="#" class="btn">Mais informações</a>
 	</div>
