--- a/index.html
+++ b/index.html
@@ -191,7 +191,51 @@
 </section>
 
 
-
+<!-- ======= Reviews Section/Seção de Comentários ======== -->
+<section class="reviews" id="reviews">
+	<div class="heading">
+		<img src="img/title-img.png" alt="">
+		<h3>Testemunho</h3>
+	</div>
+	<div class="box-container">
+		<div class="box">
+			<img src="img/pic-1.png" alt="">
+			<h3>Priscila Andrade</h3>
+			<p>Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Detraxit consequat et quo num tendi nada. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis.</p>
+			<div class="stars">
+				<i class="fas fa-star"></i>
+				<i class="fas fa-star"></i>
+				<i class="fas fa-star"></i>
+				<i class="fas fa-star"></i>
+				<i class="fas fa-star-half-alt"></i>
+			</div>
+		</div>
+		<div class="box">
+			<img src="img/pic-2.png" alt="">
+			<h3>Daniel Oliveira</h3>
+			<p>Paisis, filhis, espiritis santis. ola mundo Quem manda na minha terra sou euzis! Pra lá , depois divoltis porris, paradis. Leite de capivaris, leite de mula manquis sem cabeça.</p>
+			<div class="stars">
+				<i class="fas fa-star"></i>
+				<i class="fas fa-star"></i>
+				<i class="fas fa-star"></i>
+				<i class="fas fa-star"></i>
+				<i class="fas fa-star-half-alt"></i>
+			</div>
+		</div>
+		<div class="box">
+			<img src="img/pic-3.png" alt="">
+			<h3>Adria Souza</h3>
+			<p>Tá deprimidis, eu conheço uma cachacis que pode alegrar sua vidis. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per. Posuere libero varius. Nullam a nisl ut.</p>
+			<div class="stars">
+				<i class="fas fa-star"></i>
+				<i class="fas fa-star"></i>
+				<i class="fas fa-star"></i>
+				<i class="fas fa-star"></i>
+				<i class="fas fa-star-half-alt"></i>
+			</div>
+		</div>
+	</div>
+</section>
 
 
 	
