--- a/index.html
+++ b/index.html
@@ -238,10 +238,64 @@
 </section>
 
 
+<!-- ======= Contatcs Section/Seção de Contatos ======== -->
+<section class="contact" id="contact">
+	<div class="heading">
+		<img src="img/title-img.png" alt="">
+		<h3>Contate-Nos</h3>
+	</div>
+	<div class="row">
+		<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31873.777875368487!2d-60.00014873800121!3d-3.0349674085442957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x926c1a35b6ea5203%3A0x55b9105841c57f2e!2sCidade%20Nova%2C%20Manaus%20-%20AM!5e0!3m2!1spt-BR!2sbr!4v1654106336356!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy"></iframe>
+		<div class="form">
+			<div class="icons-container">
+				<div class="icons">
+					<i class="fas fa-map"></i>
+					<h3>Endereço: </h3>
+					<p>Manaus, Brasil - 69090-380</p>
+				</div>
+				<div class="icons">
+					<i class="fas fa-envelope"></i>
+					<h3>E-mail: </h3>
+					<p>danieloliveira.webmaster@gmail.com</p>
+					<p>danieloliveira.webmaster@hotmail.com</p>
+				</div>
+				<div class="icons">
+					<i class="fas fa-phones"></i>
+					<h3>E-mail: </h3>
+					<p>+55 (92)99221-5202</p>
+					<p>+55 (92)99131-5031</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 	
 	<script src="js/script.js"></script>
 </body>
 </html>
+
 
 <!--
     Autor: Daniel Oliveira
