--- a/index.html
+++ b/index.html
@@ -260,12 +260,19 @@
 					<p>danieloliveira.webmaster@hotmail.com</p>
 				</div>
 				<div class="icons">
-					<i class="fas fa-phones"></i>
-					<h3>E-mail: </h3>
+					<i class="fas fa-phone"></i>
+					<h3>Telefone: </h3>
 					<p>+55 (92)99221-5202</p>
 					<p>+55 (92)99131-5031</p>
 				</div>
 			</div>
+			<form action="">
+				<input type="text" placeholder="Digite seu nome" class="box">
+				<input type="email" placeholder="Digite seu email" class="box">
+				<input type="number" placeholder="Digite seu número" class="box">
+				<textarea class="box" placeholder="Digite sua mensagem" name="" id="" cols="30" rows="10"></textarea>
+				<input type="submit" value="Enviar" class="btn">
+			</form>
 		</div>
 	</div>
 </section>
