--- a/index.html
+++ b/index.html
@@ -241,55 +241,54 @@
 <!-- ======= Blogs Section/Seção de Blogs ======== -->
 <section class="blogs" id="blogs">
 	<div class="heading">
-		<img src="img/title-img.png" alt="">
-		<h3>Postagem diária</h3>
-	</div>
-	<div class="box-container">
-		<div class="box">
-			<div class="image">
-				<img src="img/blog-1.jpg" alt="">
-				<div class="icons">
-					<a href="#"><i class="fas fa-calendar"></i> 01 Jun, 2022 </a>
-					<a href="#"><i class="fas fa-user"></i> by admin </a>
-				</div>
-				<div class="content">
-					<h3>O título do blog vai aqui</h3>
-					<p>Em pé sem cair, deitado sem dormir, sentado sem cochilar Em pé sem cair.</p>
-					<a href="#" class="btn">Mais informações</a>
-				</div>
-			</div>
-		</div>
-		<div class="box">
-			<div class="image">
-				<img src="img/blog-2.jpg" alt="">
-				<div class="icons">
-					<a href="#"><i class="fas fa-calendar"></i> 01 Jun, 2022 </a>
-					<a href="#"><i class="fas fa-user"></i> by admin </a>
-				</div>
-				<div class="content">
-					<h3>O título do blog vai aqui</h3>
-					<p>Atirei o pau no gatis, per gatis num morreus. Detraxit consequat et quo.</p>
-					<a href="#" class="btn">Mais informações</a>
-				</div>
-			</div>
-		</div>
-		<div class="box">
-			<div class="image">
-				<img src="img/blog-3.jpg" alt="">
-				<div class="icons">
-					<a href="#"><i class="fas fa-calendar"></i> 01 Jun, 2022 </a>
-					<a href="#"><i class="fas fa-user"></i> by admin </a>
-				</div>
-				<div class="content">
-					<h3>O título do blog vai aqui</h3>
-					<p>Quem manda na minha terra sou euzis! Viva Forevis aptent taciti sociosqu.</p>
-					<a href="#" class="btn">Mais informações</a>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
+	   <img src="images/title-img.png" alt="">
+	   <h3>Postagem diária</h3>
+	</div> 
+	<div class="box-container"> 
+	   <div class="box" data-aos="fade-up" data-aos-delay="150">
+		  <div class="image">
+			 <img src="img/blog-1.jpg" alt="">
+			 <div class="icons">
+				<a href="#"> <i class="fas fa-calendar"></i> 01 Jun, 2022 </a>
+				<a href="#"> <i class="fas fa-user"></i> by admin </a>
+			 </div>
+		  </div>
+		  <div class="content">
+			 <h3>O título do blog vai aqui.</h3>
+			 <p>Atirei o pau no gatis, per gatis num morreus. Não sou faixa preta cumpadi, sou.</p>
+			 <a href="#" class="btn">Mais informações</a>
+		  </div>
+	   </div> 
+	   <div class="box" data-aos="fade-up" data-aos-delay="300">
+		  <div class="image">
+			 <img src="img/blog-2.jpg" alt="">
+			 <div class="icons">
+				<a href="#"> <i class="fas fa-calendar"></i> 01 Jun, 2022 </a>
+				<a href="#"> <i class="fas fa-user"></i> by admin </a>
+			 </div>
+		  </div>
+		  <div class="content">
+			 <h3>O título do blog vai aqui</h3>
+			 <p>Não sou faixa preta cumpadi, sou preto inteiris, inteiris.Quem manda na minha.</p>
+			 <a href="#" class="btn">Mais informações</a>
+		  </div>
+	   </div> 
+	   <div class="box" data-aos="fade-up" data-aos-delay="450">
+		  <div class="image">
+			 <img src="img/blog-3.jpg" alt="">
+			 <div class="icons">
+				<a href="#"> <i class="fas fa-calendar"></i> 01 Jun, 2022 </a>
+				<a href="#"> <i class="fas fa-user"></i> by admin </a>
+			 </div>
+		  </div>
+		  <div class="content">
+			 <h3>O título do blog vai aqui</h3>
+			 <p>Quem manda na minha terra sou euzis! Viva Forevis aptent taciti sociosqu.</p>
+			 <a href="#" class="btn">Mais informações</a>
+		  </div>
+	   </div> 
+	</div> 
+ </section>
 
 <!-- ======= Contatcs Section/Seção de Contatos ======== -->
 <section class="contact" id="contact">
