Update project Ok

--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
 	</div> 
  </section>
 
+
 <!-- ======= Contatcs Section/Seção de Contatos ======== -->
 <section class="contact" id="contact">
 	<div class="heading">
@@ -330,20 +331,30 @@
 </section>
 
 
+<!-- ======= Footer Section/Seção de Rodapé ======== -->
+<section class="footer">
+	<div class="links">
+	   <a href="#home" class="btn">Home</a>
+	   <a href="#menu" class="btn">Cardápio</a>
+	   <a href="#about" class="btn">Sobre</a>
+	   <a href="#reviews" class="btn">Reviews</a>
+	   <a href="#blogs" class="btn">Blogs</a>
+	   <a href="#contact" class="btn">Contatos</a>
+	</div> 
+	<p class="credit"> Criado Por <span>Daniel Oliveira</span> | Todos os Direitos Reservados! </p> 
+ </section>
+ 
 
 
+<script>
+ 
+ AOS.init({
+	duration: 800,
+ });
+ 
+</script>
 
-
-
-
-
-
-
-
-
-
-
-	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
